fix z-index of modal mask

--- a/static/style.css
+++ b/static/style.css
@@ -211,7 +211,7 @@ body {
 
 .modal-container {
   position: absolute;
-  z-index: 3;
+  z-index: 6;
   display: none;
   background-color: rgba(0, 0, 0, 0.5);
   width: 100vw;
